<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    card_view:cardBackgroundColor="@color/gray_700"
    card_view:cardCornerRadius="16dp"
    android:layout_gravity="top"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="12dp"
    android:outlineSpotShadowColor="@color/gray_900"
    card_view:cardElevation="24dp"
    android:layout_marginTop="12dp"
    tools:targetApi="p">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            card_view:cardCornerRadius="32dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile"
                tools:src="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:maxWidth="212dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/gray_100"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16sp"
            card_view:layout_constraintStart_toEndOf="@+id/cardView"
            card_view:layout_constraintTop_toTopOf="@+id/cardView"
            android:text="@string/username" />

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:maxWidth="212dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/gray_200"
            android:fontFamily="@font/poppins_regular"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/cardView"
            card_view:layout_constraintStart_toEndOf="@+id/cardView"
            android:text="@string/url" />

        <ImageView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bxs_chevron_right"
            android:layout_marginEnd="16dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>